[gd_scene load_steps=7 format=3 uid="uid://bl5hk0oi4y4a"]

[ext_resource type="Script" uid="uid://kq1fxfuwrqut" path="res://heroes/data/hero.gd" id="1_bhrjw"]
[ext_resource type="Script" uid="uid://c2xa5vwp46i6m" path="res://heroes/components/health_component.gd" id="2_01tg3"]
[ext_resource type="Texture2D" uid="uid://dwygc3evt85wp" path="res://asset_dump/delainey/Murdoch.png" id="3_c4el2"]

[sub_resource type="CanvasTexture" id="CanvasTexture_c4el2"]
specular_color = Color(1, 0, 0, 1)

[sub_resource type="CurveTexture" id="CurveTexture_ugt60"]

[sub_resource type="CanvasTexture" id="CanvasTexture_t1gkh"]
normal_texture = SubResource("CurveTexture_ugt60")
specular_color = Color(1, 0, 1, 1)

[node name="Hero" type="Node2D"]
script = ExtResource("1_bhrjw")
metadata/_edit_horizontal_guides_ = [-169.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(180, 1000)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -520.0
offset_right = 70.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeroTexture" type="TextureRect" parent="Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_c4el2")
expand_mode = 1
stretch_mode = 5

[node name="HealthTexture" type="TextureRect" parent="Control"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 36.0
offset_right = 64.0
offset_bottom = 76.0
texture = SubResource("CanvasTexture_c4el2")

[node name="HealthLabel" type="Label" parent="Control/HealthTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 50.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="AttackTexture" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -70.0
offset_top = 36.0
offset_right = -30.0
offset_bottom = 76.0
texture = SubResource("CanvasTexture_t1gkh")

[node name="AttackLabel" type="Label" parent="Control/AttackTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -12.0
offset_right = 32.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_01tg3")
metadata/_custom_type_script = ExtResource("2_01tg3")
